# agent

./: .env.example  .gitignore  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
config/: mcp_servers.example.json
scripts/: rag_manage.py  run_agent.py  run_planning.py
src/: __init__.py  config.py  constants.py  disk_image_validator.py
src/agents/: __init__.py  base.py  factory.py
src/agents/dissect/: __init__.py  dfxml.py  graph.py  nodes.py  prompts.py
src/agents/manager/: __init__.py  graph.py  nodes.py  prompts.py
src/agents/report/: __init__.py  graph.py  nodes.py  prompts.py
src/database/: engine.py  models.py  repository.py
src/graph/: agent.py  state.py
src/llm_provider/: anthropic.py  base.py  openai.py  tool_converter.py
src/mcp_client/: client.py  tool_cache.py
src/output/: __init__.py  chunker.py  summarizer.py
src/prompts/: dissect.py  manager.py  report.py  system.py
src/rag/: __init__.py  base.py  embedding.py  pgvector_store.py  service.py  types.py
src/state/: __init__.py  manager.py  messages.py  sub_agent.py
