[project]
name = "agent"
version = "0.1.0"
description = "MCP 기반 디지털 포렌식 분석 Agentic AI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.17.0",
    "anthropic>=0.75.0",
    "openai>=1.50.0",
    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "python-docx>=1.1.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_client", "src/llm_provider", "src/prompts", "src/database", "src/agents", "src/state", "src/output", "src/rag"]
sources = ["src"]

[tool.hatch.build.targets.editable]
packages = ["src/mcp_client", "src/llm_provider", "src/prompts", "src/database", "src/agents", "src/state", "src/output", "src/rag"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
